# chit-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  REQUIREMENTS.tmp  TODO.md  chit_er_diagram.xml  conanfile.txt
client/: Makefile  client.cpp  client.h  main.cpp  test.sh  user.h
libs/: Makefile  sockio.cpp  sockio.h
server/: Makefile  consts_globs_shared.h  main.cpp  notifier.cpp  notifier.h  server.cpp  server.h  servlet.cpp  servlet.h  temp.txt  test.sh  user.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.h  User.h  main.cpp
src/server/: CMakeLists.txt  ConstsGlobsShared.h  DbPool.cpp  DbPool.h  Notifier.cpp  Server.cpp  Server.h  Servlet.cpp  Servlet.h  User.h  constsGlobsShared.h  globals.h  main.cpp
src/shared/: CMakeLists.txt  Sockio.cpp  User.h  chitter.cpp  chitter.h  ircConstants.h  sockio.cpp  sockio.h  status.h
src/shared/chitter/: CMakeLists.txt  channelFuncs.cpp  channelFuncs.h  chitter.h  convenienceFuncs.h  serverFuncs.cpp  serverFuncs.h  userFuncs.cpp  userFuncs.h  utils.cpp  utils.h
src/shared/configUtils/: CMakeLists.txt  configUtils.cpp  configUtils.h
src/shared/sockio/: CMakeLists.txt
test/: CMakeLists.txt  client-digocean-test.sh  client-local-test.sh  server-test.sh
test/chitter/: CMakeLists.txt  chitterTest.cpp
test/scripts/: build.sh  client-digocean-test.sh  client-local-test.sh  install.sh  server-test.sh
test/sockio/: CMakeLists.txt  sockioTest.cpp
